--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,45 @@
 .App{
     position: relative;
+    min-height: calc(100vh - 22px);
     padding-bottom: 120px;
+}
+
+.App__btn{
+    display: grid;
+    place-items: center;
+    
+    background-color: var(--red-color);
+    border: 3px solid black ;
+    border-radius: 5px;
+    color: white;   
+    font-size: 2.5rem;
+    width: 45px;
+    aspect-ratio: 1;
+    cursor: pointer;
+
+    position: fixed;
+    bottom: 50px;
+    right: -50px;
+    z-index: 3;
+}
+
+.slideBtn{
+    animation: slideRightBtn  .5s both;
+}
+
+
+@keyframes slideUpBtn {
+    to{
+        bottom: 50px;
+    }
+}
+
+@keyframes slideRightBtn {
+    to{
+        right: 50px;
+    }
+}
+
+.App__btn:hover{
+    transform: scale(1.2);
 }
