--- a/src/pages/styles/Pokedex.css
+++ b/src/pages/styles/Pokedex.css
@@ -7,6 +7,7 @@
     place-items: center;
     grid-template-columns: repeat(auto-fit, minmax( min(150px, 100%), 1fr ));
     gap: 3rem;
+    margin-bottom: 2rem;
 
 }
 
@@ -75,4 +76,5 @@
 
 .pokedex__listPages li.actualPage{
     background-color: rgb(156, 4, 4);
+    transform: scale(1.3);
 }
