--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,12 @@
 /* Reset */
 *,*::after,*::before{
     box-sizing: border-box;
-    scroll-behavior: smooth;
 }
+
+html {
+    scroll-behavior: smooth;
+  }
+  
 
 body{
     margin: 0;
