--- a/src/pages/styles/Pokedex.css
+++ b/src/pages/styles/Pokedex.css
@@ -8,7 +8,7 @@
     grid-template-columns: repeat(auto-fit, minmax( min(150px, 100%), 1fr ));
     gap: 3rem;
     margin-bottom: 2rem;
-
+    margin-top: 2.5rem;
 }
 
 .pokedex__form-input, .pokedex__perPage-input{
